# ultra

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  PRODUCTION_REPO_MANIFEST.md  README.md  docker-compose.postgres.yml  pyproject.toml
.claude/: napkin.md
.github/workflows/: deploy-platform-manual.yml  deploy-ultra-backend.yml  deploy-ultra-frontend.yml  platform-maintenance.yml
deploy/caddy/: Caddyfile.platform-node.template  Caddyfile.single-host.template
deploy/env/: codeexec-service.env.example  megaseg-service.env.example  platform.env.example  ultra-backend.env.example
deploy/keycloak/: sync_keycloak_realm.py
docs/: production-deployment.md
frontend/: components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: benchmark_code_execution_service.py  bootstrap_production_host.sh  deploy_codeexec_service.sh  deploy_megaseg_service.sh  deploy_platform_manual.sh  deploy_ultra_backend.sh  deploy_ultra_frontend.sh  dev_stack.sh  eval_codeexec_reasoning_suite.py  generate_megaseg_case_report.py  monorepo_env.sh  release_codescan.sh  render_production_templates.py  restart_dev.sh  smoke_code_execution_service.py  smoke_pro_mode_code_execution.py  smoke_pro_mode_opus.py  sync_science_model_assets.sh  verify_integration.sh  verify_platform_smoke.sh
src/: __init__.py  bqapi_bootstrap.py  chat_titles.py  config.py  legacy_llm_runtime.py  llm.py  llm_client.py  logger.py  tools.py  utils.py
src/api/: v3.py  (+5 more)
tests/: test_auth_bridge.py  test_bisque_auth_hardening.py  test_bisque_oidc_user_reconciliation.py  test_bisque_tools.py  test_code_execution_contract.py  test_code_execution_jobs.py  test_code_execution_service_client.py  test_code_execution_tool_service.py  test_codeexec_reasoning_runtime.py  test_codeexec_runner.py  test_codeexec_service.py  test_golden_tasks.py  test_llm_modularization.py  test_megaseg_service.py  test_pro_mode_opus_runtime.py  test_run_artifact_backfill.py  test_science_tool_paths.py  test_v3_router.py
(+770 files in other folders)
