[project]
name = "bisque-ultra"
version = "0.1.0"
description = "Scientific imaging API and web frontend"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.0.0",
    "agno==2.5.11",
    "httpx>=0.26.0",
    "fastapi>=0.110.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.27.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.48",
    "pgvector>=0.4.2",
    "bqapi-ucsb",
    "transformers",
    "torchvision",
    "torch",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "SimpleITK>=2.4.0",
    "pillow",
    "ultralytics",
    "nibabel>=5.2.0",
    "tifffile>=2024.8.30",
    "pandas>=2.2.0",
    "h5py>=3.11.0",
    "jupyter_client>=8.6.0",
    "ipykernel>=6.29.0",
    "langgraph>=1.1.3,<2",
    "langgraph-checkpoint-postgres>=3.0.5,<4",
    "langgraph-checkpoint-sqlite>=3.0.3,<4",
    "rdkit>=2025.9.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]
scientific-imaging = [
    "bioio",
    "bioio-czi",
    "bioio-dv",
    "bioio-imageio",
    "bioio-lif",
    "bioio-nd2",
    "bioio-ome-tiff",
    "bioio-ome-zarr",
    "bioio-sldy",
    "bioio-tifffile",
    "bioio-tiff-glob",
    "bioio-bioformats",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
